Fix actions style on mobile table

--- a/src/components/organisms/Table/Table.scss
+++ b/src/components/organisms/Table/Table.scss
@@ -190,6 +190,7 @@
     }
 
     .ebs-action__wrapper {
+      @include flex-center;
       position: relative;
     }
   }
